--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "next-netlify-starter",
-  "version": "0.5.0",
+  "name": "blinder",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^5.7.3",
-    "next": "^14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@next/font": "13.0.7",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
+    "framer-motion": "^11.11.4",
+    "gradientify": "^1.1.5",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^5.3.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
