--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint-config-next": "13.1.1",
     "framer-motion": "^11.11.4",
     "gradientify": "^1.1.5",
-    "next": "13.1.1",
+    "next": "^13.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0"
