--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.0.7",
-    "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
-    "framer-motion": "^11.11.4",
-    "gradientify": "^1.1.5",
     "next": "^14.2.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,8 +17,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
+    "eslint": "^8.57.1",
     "tailwindcss": "^3.2.4"
   }
 }
