--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^11.11.7",
     "next": "^14.2.15",
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.9",
     "eslint": "^8.57.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.13"
   }
 }
