--- a/package.json
+++ b/package.json
@@ -9,22 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.10",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
     "@netlify/plugin-nextjs": "^5.7.4",
-    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^11.11.7",
     "next": "^14.2.15",
-    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "tailwindcss": "^3.4.13"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
