--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.3",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
