--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@netlify/plugin-nextjs": "^5.7.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^11.11.7",
     "next": "^14.2.15",
     "react": "18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
